--- a/期末/期末.md
+++ b/期末/期末.md
@@ -1,18 +1,18 @@
 # 習題 1: 自介
-[h1]()
+[h1](https://github.com/joex1111/_wp/tree/main/hw1)
 
 原創
 
 # 習題 2 : 註冊表單
-[h2]()
+[h2](https://github.com/joex1111/_wp/tree/main/hw2)
 chatgpt
 
 # 習題 3 : js練習
-[h3]()
+[h3](https://github.com/joex1111/_wp/tree/main/hw3)
 原創
 
 # 習題4: js 進階練習
-[h4]()
+[h4](https://github.com/joex1111/_wp/tree/main/hw4)
 
 原創只有座前四題
 
@@ -20,18 +20,16 @@ chatgpt
 不會
 
 # 習題6 /7:
-[h6/7]()
+[h6/7](https://github.com/joex1111/_wp/tree/main/hw6%20%207)
 chatgpt
 
-# 習題8:
-[h8]()
+# 習題8:python練習
+[h8](https://github.com/joex1111/_wp/tree/main/hw8)
 原創
 
-# 習題8:
-不會
 
 # 期中
-[期中]()
+[期中](https://github.com/joex1111/_wp/tree/main/%E6%9C%9F%E4%B8%AD)
 一頁商店
 
 chatgpt做的
